--- a/healthcare.html
+++ b/healthcare.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <section class="airfreight_hero">
+    <section class="healthcare_hero">
         <header class="header">
             <div style="margin: 0;" class="row">
                 <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 nav_logo_col">
@@ -81,7 +81,7 @@
 
         <div class="service_sub_hero">
             <div class="service_sub_hero_head">
-                <h1>X X X X X</h1>
+                <h1>HEALTHCARE INSTRUMENT SHIPPING</h1>
             </div>
         </div>
     </section>
@@ -94,33 +94,71 @@
             <div class="col-xl-9 col-lg-9 col-md-9 col-sm-12 col-12 service_sub_sec1_col2">
                 <div class="service_sub_sec1_strip">
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/plane.gif" alt="">
+                        <img src="img/centrifuge.gif" alt="">
                         <div class="about_stripline"></div>
-                        <h6>xXxXxXxXxXxXxX</h6>
+                        <h6>B2B global pickup and delivery</h6>
                     </div>
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/plane.gif" alt="">
+                        <img src="img/centrifuge.gif" alt="">
                         <div class="about_stripline"></div>
-                        <h6>xXxXxXxXxXxXxX</h6>
+                        <h6>Packing and re-packing</h6>
                     </div>
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/plane.gif" alt="">
+                        <img src="img/centrifuge.gif" alt="">
                         <div class="about_stripline"></div>
-                        <h6>xXxXxXxXxXxXxX</h6>
+                        <h6>Equipment setup and installation</h6>
                     </div>
                 </div>
                 <div class="service_sub_sec1_para">
+                    <h3>Streamline Your Healthcare Instrument Shipping in Dubai Operations with Global Leaders</h3>
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-                    </p>
-                    <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        Whether you are moving programmable pacemakers across the globe or blood glucose meters around
+                        the country, INC Express is ready to serve you with our highly Healthcare Instrument Shipping in
+                        Dubai and efficient medical device logistics professionals. Listed as the best company for
+                        healthcare instrument shipping in Dubai, our team has the necessary experience to craft a custom
+                        solution that is efficient, secure, and eligible to improve your business.
                     </p>
                 </div>
             </div>
         </div>
     </section>
 
+
+
+    <section class="service_sub_paragaphs animate fadeInUp">
+        <h3>Explore Our Medical Equipment Shipping Services</h3>
+        <p>
+            At INC Express, our top-notch procedures are great for handling a vast range of medical device
+            transportation that could reduce the uncertainty of deliveries. We always prioritize your products, consider
+            the distinct shipping requirements, and also focus on crafting customized solutions that can ensure
+            successful transit.
+        </p>
+        <p>
+            We also go the extra mile by conducting thorough on-site surveys before the final shipment. From following
+            strict packaging protocols to minimizing the risk of cargo damage, we are committed to serving the needs of
+            consumers at their best. <br>
+            As we believe that medical equipment shipping is far beyond normal transportation, we always take some extra
+            care. Our dedicated customer service team also offers complete support if clients have doubts about their
+            shipments. Cater to varying product and customer needs, we offer.
+        </p>
+
+        <h3>Our Medical Device Transportation Qualifications You Can Trust</h3>
+        <p>
+            At INC Express, we provide reliable and faster medical device supply chain solutions for your important
+            medical and biotech equipment. As we are highly trained in handling medical device supply chain operations
+            and customer service, our shipping credentials include the following:
+        </p>
+        <ul>
+            <li>State-of-the-art and advanced asset monitoring systems to ensure reduced risk and damage</li>
+            <li>Standard operating procedures</li>
+            <li>ISO 13485 Certification UAE</li>
+            <li>Ministry of Health and Prevention (MOHAP)</li>
+            <li>Cargo screening facilities with TSA certification</li>
+        </ul>
+        <br><br><br>
+        <h3>Why We Are the Best In Medical Equipment Shipping Dubai?</h3>
+
+    </section>
 
 
 
@@ -131,33 +169,41 @@
         <div class="row">
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
                 <div class="service_sub_sec2_card1">
-                    <h3>XXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
+                    <h3>Medical devices</h3>
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        Medical devices are lifesavers. We know you need a supply chain to quickly handle and deliver
+                        your critical devices, surgical kits, and other equipment to the most needed places.
                     </p>
                 </div>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
                 <div class="service_sub_sec2_card2">
-                    <h3>XXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
+                    <h3>Custom Shipping Medical Equipment's</h3>
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        Our approach towards the cross trade shipment is completely personalized and customized as we
+                        understand the varying nature of countries and accordingly shipping requirements.
                     </p>
                 </div>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
                 <div class="service_sub_sec2_card1">
-                    <h3>XXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
+                    <h3>Emergency Delivery Service</h3>
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        Our work in different healthcare fields has made us a proven leader in the medical equipment
+                        shipping field. It is a fact that CT scanners, Lasers, radiology equipment, and different
+                        hazardous materials can pose severe transportation problems, which need excellent shipping
+                        services and engineered techniques to ensure success. Sometimes, emergency delivery service is
+                        also required; here, our speedy and efficient delivery comes to act.
                     </p>
                 </div>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
                 <div class="service_sub_sec2_card2">
-                    <h3>XXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
+                    <h3>Transportation Service</h3>
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        With over a vast year of experience, we have moved thousands of shipments for medical equipment
+                        dealers, manufacturers, retailers, hospitals, and clinics worldwide. If you need Medical device
+                        transportation service, we know how to do the job at its best.
                     </p>
                 </div>
             </div>
@@ -166,7 +212,7 @@
 
 
 
-    <section class="service_sub_paragaphs animate fadeInUp">
+    <!-- <section class="service_sub_paragaphs animate fadeInUp">
         <h3>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
         <p>
             xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
@@ -175,19 +221,25 @@
         <p>
             xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
         </p>
-    </section>
+    </section> -->
 
 
-<h2 class="why_us_text">Why Us</h2>
+    <h2 class="why_us_text">Why Us</h2>
     <section class="service_sub_sec3">
-        <img src="img/Group 381.png" alt="">
-        <div class="row service_sub_sec3_card_container">
+        <img src="img/Group 385.png" alt="">
+        <div class="row service_sub_sec3_card_container cont_bg_8">
+            <h3>Finding Reliable Healthcare Shipping Solutions</h3>
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
+                        <!-- <h3>XXXXXXXXXXXXX</h3> -->
                         <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                            Not all companies can provide faster, safer, and time-sensitive medical equipment courier
+                            services. There are many consequences when consumers need temperature-controlled vans or
+                            vehicles with air-ride suspension. Consumers want the delivery process seamless when the
+                            talk is about medical transportation and medical device shipment services. As there are
+                            different surgical supplies, fragile devices, and equipment handled in the medical field, we
+                            can not take even a 1% chance of risk
                         </p>
                     </div>
                 </div>
@@ -195,32 +247,32 @@
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
+                        <!-- <h3>XXXXXXXXXXXXX</h3> -->
                         <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
-                <div class="service_sub_sec3_card">
-                    <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
-                        <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                            At INC Express, when we deliver medical equipment globally or domestically, we work
+                            diligently with our shipping team to determine the best shipping process for each project.
+                            There are significant needs that need to be dealt with expertise when it comes to medical
+                            equipment, and we can design and develop the best logistics plans here catering to specific
+                            needs that could meet the requirements of businesses for supplying medical equipment.
                         </p>
                     </div>
                 </div>
             </div>
 
-            <div class="col-xl-4 col-lg-4 col-md-0 col-sm-0 col-0 animate fadeInUp"></div>
+            <h3>Our USP To Become Industry Leaders In Medical Equipment Shipping</h3>
 
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
+                        <!-- <h3>XXXXXXXXXXXXX</h3> -->
                         <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                            We have not gained expertise on medical equipment shipping overnight. We have been working
+                            actively in this for years to earn the trust and faith of hospitals, medical equipment
+                            dealers, and suppliers worldwide. Hence, we have gained popularity over the years as the
+                            best healthcare shipping solution in Dubai and are widely recognized for our reliability and
+                            versatility. With our specialized logistics and freight solutions, we serve various health
+                            and medical professionals. Our skills, capabilities, knowledge, and experience have set us
+                            apart.
                         </p>
                     </div>
                 </div>
@@ -228,9 +280,62 @@
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
+                        <!-- <h3>XXXXXXXXXXXXX</h3> -->
                         <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                            Our services include:
+                        </p>
+                        <ul>
+                            <li>Special medical equipment shipping Services</li>
+                            <li>Emergency shipping for medical equipment</li>
+                            <li>Expedited medical equipment shipping services</li>
+                            <li>Freight solutions for medical equipment</li>
+                            <li>Medical equipment delivery service</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
+                <div class="service_sub_sec3_card">
+                    <div class="service_sub_sec3_card_path">
+                        <!-- <h3>XXXXXXXXXXXXX</h3> -->
+                        <p>
+                            At INC Express, we not only understand the process of handling medical tools, but we also
+                            know how to move the medical equipment well. By considering the nuances of healthcare
+                            logistics, we offer instant online tracking that lets our customers receive real-time
+                            updates and a clear idea of their medical equipment delivery process and timing. We also
+                            provide time-sensitive support to professional medical equipment manufacturers who are
+                            crucial in offering different healthcare facilities.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp"></div>
+
+            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
+                <div class="service_sub_sec3_card">
+                    <div class="service_sub_sec3_card_path">
+                        <!-- <h3>XXXXXXXXXXXXX</h3> -->
+                        <p>
+                            Not all companies can provide faster, safer, and time-sensitive medical equipment courier
+                            services. There are many consequences when consumers need temperature-controlled vans or
+                            vehicles with air-ride suspension. Consumers want the delivery process seamless when the
+                            talk is about medical transportation and medical device shipment services. As there are
+                            different surgical supplies, fragile devices, and equipment handled in the medical field, we
+                            can not take even a 1% chance of risk
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
+                <div class="service_sub_sec3_card">
+                    <div class="service_sub_sec3_card_path">
+                        <!-- <h3>XXXXXXXXXXXXX</h3> -->
+                        <p>
+                            As we have developed countless supply chain solutions to complete a seamless medical
+                            equipment supply process, we take pride in being one of the leading companies in healthcare
+                            instrument shipping in Dubai. So, you can trust us to be your next shipping partner for
+                            years.
                         </p>
                     </div>
                 </div>
