--- a/project-cargo.html
+++ b/project-cargo.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <section class="airfreight_hero">
+    <section class="projectCargo_hero">
         <header class="header">
             <div style="margin: 0;" class="row">
                 <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 nav_logo_col">
@@ -81,7 +81,7 @@
 
         <div class="service_sub_hero">
             <div class="service_sub_hero_head">
-                <h1>X X X X X</h1>
+                <h1>PROJECT CARGO</h1>
             </div>
         </div>
     </section>
@@ -94,27 +94,32 @@
             <div class="col-xl-9 col-lg-9 col-md-9 col-sm-12 col-12 service_sub_sec1_col2">
                 <div class="service_sub_sec1_strip">
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/plane.gif" alt="">
+                        <img src="img/delivery-truck.gif" alt="">
                         <div class="about_stripline"></div>
-                        <h6>xXxXxXxXxXxXxX</h6>
+                        <h6>Customized Approach</h6>
                     </div>
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/plane.gif" alt="">
+                        <img src="img/delivery-truck.gif" alt="">
                         <div class="about_stripline"></div>
-                        <h6>xXxXxXxXxXxXxX</h6>
+                        <h6>Document Handling</h6>
                     </div>
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/plane.gif" alt="">
+                        <img src="img/delivery-truck.gif" alt="">
                         <div class="about_stripline"></div>
-                        <h6>xXxXxXxXxXxXxX</h6>
+                        <h6>Flexibility in Mode Of Transport</h6>
                     </div>
                 </div>
                 <div class="service_sub_sec1_para">
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        At INC Express, we offer our customers with exceptional logistics services for their project
+                        cargo requirements. We reduce the distances between their raw materials and equipment/plants. No
+                        matter you require international shipping services for your overweight cargo or are willing to
+                        transport heavy machinery, INC Express is at your step with exclusive operational as well as
+                        technical skills, bulk/packaged goods handling, heavy lifting services and more.
                     </p>
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        Our top-notch services have a profound experience in providing project cargo services. Being a
+                        reliable and trustworthy partner, we offer unmatched quality in our project cargo services.
                     </p>
                 </div>
             </div>
@@ -131,33 +136,38 @@
         <div class="row">
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
                 <div class="service_sub_sec2_card1">
-                    <h3>XXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
+                    <h3>Co-ordination & Implementation</h3>
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        Bulk Shipments usually require precision and timely coordination, being one of the top freight
+                        forwarding company in Dubai, we offer to outclass team to collaboratively coordinate and
+                        implement service.
                     </p>
                 </div>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
                 <div class="service_sub_sec2_card2">
-                    <h3>XXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
+                    <h3>Client's Participation</h3>
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        We coordinate our project cargo service with the site of delivery and the client to avoid any
+                        confusion or hassle in the process.
                     </p>
                 </div>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
                 <div class="service_sub_sec2_card1">
-                    <h3>XXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
+                    <h3>Bulk Air/Road/Sea Cargo Management</h3>
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        We ensure that all the heavy machinery or bulk cargo we transport or ship continues its
+                        intactness and quality. Hence, our officers have skills in taking complete care of it.
                     </p>
                 </div>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
                 <div class="service_sub_sec2_card2">
-                    <h3>XXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
+                    <h3>Real-time Status</h3>
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        We make sure that our client's stay calm and assured of their shipment and hence we provide them
+                        with real-time updates on the status of their shipment.
                     </p>
                 </div>
             </div>
@@ -166,7 +176,7 @@
 
 
 
-    <section class="service_sub_paragaphs animate fadeInUp">
+    <!-- <section class="service_sub_paragaphs animate fadeInUp">
         <h3>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
         <p>
             xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
@@ -175,19 +185,20 @@
         <p>
             xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
         </p>
-    </section>
+    </section> -->
 
 
-<h2 class="why_us_text">Why Us</h2>
+    <h2 class="why_us_text">Why Us</h2>
     <section class="service_sub_sec3">
-        <img src="img/Group 381.png" alt="">
-        <div class="row service_sub_sec3_card_container">
+        <img src="img/Group 389.png" alt="">
+        <div class="row service_sub_sec3_card_container cont_bg_10">
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
+                        <h3>Customized Route</h3>
                         <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                            We create dedicated routes for our clients, which are safe and uniform, to promote easier
+                            importing and exporting of your cargo.
                         </p>
                     </div>
                 </div>
@@ -195,9 +206,10 @@
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
+                        <h3>Safe Warehousing</h3>
                         <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                            Our transportation facilities have foolproof of any and all sorts of extremities that might
+                            damage the freight in any way.
                         </p>
                     </div>
                 </div>
@@ -205,9 +217,10 @@
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
+                        <h3>Maintained Schedules</h3>
                         <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                            Our technical and shipment teams have exceptional time management skills; they will state
+                            and follow strict schedules for freight transportation.
                         </p>
                     </div>
                 </div>
@@ -218,9 +231,11 @@
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
+                        <h3>Easy Transportation
+                            of Cargo</h3>
                         <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                            We select the cargo containers and transportation modes that fir your requirements
+                            perfectly.
                         </p>
                     </div>
                 </div>
@@ -228,9 +243,10 @@
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
+                        <h3>Intermodal Shipment:</h3>
                         <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                            Our wide access to different transportation means, makes available the intermodal shipment
+                            feature for our clients.
                         </p>
                     </div>
                 </div>
